dd %{env} to rename options in csv store

--- a/ldms/man/ldms-static-test.man
+++ b/ldms/man/ldms-static-test.man
@@ -1,6 +1,6 @@
 .\" Manpage for ldms-static-test.sh
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 8 "6 Jul 2018" "v4.1" "ldms-static-test.sh man page"
+.TH man 8 "18 Sep 2018" "v4.1" "ldms-static-test.sh man page"
 
 .SH NAME
 ldms-static-test.sh \- Run a canned test scenario
@@ -78,6 +78,10 @@ Turns off use of valgrind for any ldmsd or ldms_ls subsequently started.
 file_created <filename>
 .br
 Verifies the existence and readability of filename.
+.TP
+rollover_created <filename>
+.br
+Verifies the existence and readability of rollover files matching pattern filename.[0-9]*.
 .TP
 bypass=<0,1>
 .br
