--- a/ldms/man/Plugin_store_csv.man
+++ b/ldms/man/Plugin_store_csv.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_store_csv
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "22 Oct 2017" "v3.5" "LDMS Plugin store_csv man page"
+.TH man 7 "18 Sep 2018" "v4" "LDMS Plugin store_csv man page"
 
 .SH NAME
 Plugin_store_csv - man page for the LDMS store_csv plugin
@@ -28,7 +28,7 @@ The configuration parameters altheader, rolltype, rollover, buffer, buffertype, 
 A subset of these can be overriden by the action=custom values.
 .TP
 .BR config
-name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/1/N> buffertype=<3/4> rolltype=<rolltype> rollover=<rollover> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]] [create_uid=<int-uid> [create_gid=<int-gid]] [create_perm=<octal-mode>]
+name=<plugin_name> action=init path=<path> [ altheader=<0/!0> buffer=<0/1/N> buffertype=<3/4> rolltype=<rolltype> rollover=<rollover> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]] [create_uid=<int-uid>] [create_gid=<int-gid] [create_perm=<octal-mode>]
 .br
 ldmsd_controller configuration line
 .RS
@@ -102,29 +102,31 @@ Only octal (e.g.0744) specifications are allowed. If unspecified or 0 is given, 
 .TP
 create_uid=<numeric-uid>
 .br
-Specify a new (non-zero) user id for data files. If unspecified or 0 is given, no change in ownership is made.
+Specify a new user id for data files. If unspecified, no change in user ownership is made.
 Changes in ownership of the files do not affect intermediate directories.
 .TP
 create_gid=<numeric-gid>
 .br
-Specify a new (non-zero) group id for data files. If unspecified or 0 is given, no change in group is made. If create_uid is not given, create_gid is ignored.
+Specify a new group id for data files. If unspecified, no change in group ownership is made.
 .TP
 rename_template=<metapath>
 .br
-This option provides relocating closed CSV files, typically to a subdirectory, for processing by other tools that watch directories. The metapath template is applied to define a rename after file closure. The rename is limited to location on the same mount point, per the C rename(2) call. The following substitutions in the template are performed: %P by plugin name, %C by container name, %S by schema name, %T by file event notification type, %B by basename(closed-file-name), %D by dirname(closed-file-name), %s by timestamp suffix, if it exists. Errors in template specification will cause the rename to be skipped. As part of the rename process, the mode and ownership of the file may also be adjusted by specifying rename_perm, rename_uid, and rename_gid. Missing intermediate directories will be created if possible. To enable greater flexibility than renaming, the notify option must be used instead of the rename_template option.
+This option relocates closed CSV files, typically to a subdirectory, for processing by other tools that watch directories. The metapath template is applied to define a new name after file closure. The rename is limited to locations on the same mount point, per the C rename(2) call. Substitutions (%) in the provided template are performed as described in METAPATH SUBSTITUTIONS below.
+Errors in template specification will cause the rename to be skipped. As part of the renaming process, the mode and ownership of the file may also be adjusted by specifying rename_perm, rename_uid, and rename_gid. Missing intermediate directories will be created if possible. To enable greater flexibility than the renaming just described (e.g. crossing file systems), the notify option must be used to call another program.
+
 .TP
 rename_perm=<modebits>
 .br
-Only octal (e.g.0744) specifications are allowed. If unspecified or 0 is given, then no change is made. The permissions are changed before the rename and even if the rename fails.
+Only octal (e.g.0744) specifications are allowed. If unspecified or 0 is given, then no change is made. The permissions are changed before the rename and even if the rename fails. This option is applied only if rename_template is applied.
 .TP
 rename_uid=<numeric-uid>
 .br
-Specify a new (non-zero) user id for the file. If unspecified or 0 is given, no change in ownership is made.
-Changes in ownership of the files do not affect intermediate directories that might be created following the template.
+Specify a new user id for the file. If unspecified, no change in user ownership is made.
+Changes in ownership of the files do not affect intermediate directories that might be created following the template. This option is applied only if rename_template is applied.
 .TP
 rename_gid=<numeric-gid>
 .br
-Specify a new (non-zero) group id for the file. If unspecified or 0 is given, no change in group is made. If rename_uid is not given, rename_gid is ignored.
+Specify a new group id for the file. If unspecified, no change in group ownership is made. This option is applied only if rename_template is applied.
 
 .RE
 
@@ -135,7 +137,7 @@ unless overriden by the action=custom values. Only a subset can be overridden.
 
 .TP
 .BR config
-name=<plugin_name> action=custom container=<container> schema=<schema> [ altheader=<0/!0> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]]
+name=<plugin_name> action=custom container=<container> schema=<schema> [ altheader=<0/!0> userdata=<0/!0>] [notify=<path> [notify_isfifo=<bool>]] [rename_template=<metapath> [rename_uid=<int-uid> [rename_gid=<int-gid] rename_perm=<octal-mode>]] [create_uid=<int-uid>] [create_gid=<int-gid] [create_perm=<octal-mode>]
 
 .br
 ldmsd_controller configuration line
@@ -301,7 +303,44 @@ The name of the file.
 
 .RE
 
+.SH METAPATH SUBSTITUTION
 
+The following % escape sequence replacements are performed on the rename_template value for file renamings:
+.PP
+.TP
+%P 
+.br
+plugin name
+.TP
+%C
+.br
+container name
+.TP
+%S
+.br
+schema name
+.TP
+%T 
+.br
+file event notification type
+.TP
+%B
+.br
+basename(closed-file-name)
+.TP
+%D
+.br
+dirname(closed-file-name)
+.TP
+%{ENV_VAR_NAME}
+.br
+getenv(ENV_VAR_NAME). The use of undefined or empty environment vars yields an empty substitution, not an error.
+Characters in the environment variable are restricted to: 'A-Za-z0-9%@()+-_./:='; other characters present will prevent the rename.
+.TP
+%s
+.br
+timestamp suffix, if it exists. 
+.PP
 
 .SH NOTES
 .PP
@@ -315,7 +354,7 @@ The 'sequence' option has been removed.
 There is a maximum of 20 concurrent CSV stores.
 
 .SH IMPERFECT FEATURES
-The rename options do not accept symbolic mode changes or uid or gid.
+The rename and create options do not accept symbolic permissions, uid, or gid. There is no metapath substitution for file creation.
 
 .SH EXAMPLES
 .PP
@@ -325,6 +364,11 @@ load name=store_csv
 config name=store_csv action=init altheader=1 path=/XXX/storedir
 config name=store_csv action=custom container=loadavg_store schema=loadavg
 strgp_add name=csv_mem_policy plugin=store_csv container=loadavg_store schema=loadavg
+.fi
+Or with modifications for file properties
+.nf
+load name=store_csv
+config name=store_csv action=init altheader=1 rolltype=2 rollover=0 path=/mprojects/ovis/ClusterData/${LDMSCLUSTER} create_gid=1000000039 create_perm=640 rename_template=%D/archive-spool/%{HOSTNAME}/%B rename_perm=444
 .fi
 
 .SH SEE ALSO
