replace string list with idx traversal.
Add option check library function and apply.

This required adding an accessor function for the key names in av_list.

Include syntax checks per discussion w/gentile and documented.
Added test case for syntax checks in opt_file, including blacklist
functionality in plugattr constructor/updater.
incidentally fixed formatting of many messages in store_csv.

--- a/ldms/scripts/examples/lustre2_client.3
+++ b/ldms/scripts/examples/lustre2_client.3
@@ -9,8 +9,8 @@ updtr_prdcr_add name=allhosts regex=.*
 updtr_start name=allhosts
 
 load name=store_csv
-config name=store_csv action=init path=${STOREDIR} altheader=0 container=node1
-#config name=store_csv action=custom schema=${testname} path=${STOREDIR} altheader=1 container=node2
+config name=store_csv path=${STOREDIR} altheader=0
+config name=store_csv schema=${testname} path=${STOREDIR} altheader=1 container=node2
 
 strgp_add name=store_${testname} plugin=store_csv schema=Lustre_Client container=node
 strgp_prdcr_add name=store_${testname} regex=.*
