--- a/ldms/scripts/examples/conf_file_csv.1
+++ b/ldms/scripts/examples/conf_file_csv.1
@@ -9,7 +9,7 @@ updtr_prdcr_add name=allhosts regex=.*
 updtr_start name=allhosts
 
 load name=store_csv
-config name=store_csv path=${STOREDIR} altheader=0
+config name=store_csv opt_file=${SC_CONF}
 
 strgp_add name=store_csv_meminfo plugin=store_csv schema=meminfo container=bigiron
 strgp_prdcr_add name=store_csv_meminfo regex=.*
