--- a/ldms/scripts/examples/csvcheckattrs.2
+++ b/ldms/scripts/examples/csvcheckattrs.2
@@ -1,6 +1,5 @@
 load name=store_csv
-config name=store_csv path=${STOREDIR} altheader=0 rollover=5 rollagain=10 rolltype=5 rename_template=${STOREDIR}/%{HOSTNAME}/%B
-
+config name=store_csv path=${STOREDIR} altheader=0 bogon=2
 prdcr_add name=localhost1 host=localhost type=active xprt=${XPRT} port=${port1} interval=10000000
 prdcr_start name=localhost1
 
@@ -8,6 +7,7 @@ updtr_add name=allhosts interval=1000000 offset=100000
 updtr_prdcr_add name=allhosts regex=.*
 updtr_start name=allhosts
 
+#config name=store_csv action=custom path=${STOREDIR} altheader=1 container=node schema=${testname}
 strgp_add name=store_${testname} plugin=store_csv schema=${testname} container=node
 strgp_prdcr_add name=store_${testname} regex=.*
 strgp_start name=store_${testname}
