add LDMS_ENABLE_MMALLOC_DEBUG env var test to bypass mmap
This enables debugging memory operations where errors are normally
masked by the mmalloc pool. transports (ugni) which require mmapped
addresses will not work with this enabled. works with sock and
ib rdma. This also include the mmalloc test code in the default build.
Needs to be enabled with --mmdebug configure option in both lib and
ldms and then activated by setting LDMS_ENABLE_MMALLOC_DEBUG.
Static test 'many' is included  which loads multiple samplers.

--- a/ldms/man/ldmsd.man
+++ b/ldms/man/ldmsd.man
@@ -48,6 +48,11 @@ LDMSD_MEM_SZ
 The size of memory reserved for metric sets. Set this variable or specify "-m"
 to ldmsd. See the -m option for further details. If both are specified, the -m
 option takes precedence over this environment variable.
+.TP
+LDMS_ENABLE_MMALLOC_DEBUG
+If present (any value), enables debugging of set allocations by disabling
+mmapped memory management. Not compatible with transports (ugni) that
+expect mapped memory.
 
 .SS CRAY Specific Environment variables for ugni transport
 LDMS_UGNI_PTAG
