--- a/ldms/scripts/examples/filesingle.2
+++ b/ldms/scripts/examples/filesingle.2
@@ -3,7 +3,7 @@ config name=${testname} producer=localhost${i} schema=${testname} instance=local
 start name=${testname} interval=1000000 offset=0
 
 load name=store_csv
-config name=store_csv action=init path=${STOREDIR} altheader=0 container=node1
+config name=store_csv path=${STOREDIR} altheader=0
 
 prdcr_add name=localhost1 host=localhost type=active xprt=${XPRT} port=${port1} interval=2000000
 prdcr_start name=localhost1
